--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
 </head>
 
 <body>
+  <h1>SpaceWalkers</h1>
+ <nav class="navone">
 
- <!-- navigation code here -->
+<a href="#">Home</a>
+<a href="#">About us</a>
+<a href="#">Blog</a>
+<a href="#">Contact</a>
+</nav>
 
-  <div class="container home">
+<img src="main-header.png">
+  
+<div class="container home">
 
     <header class="intro">
        <!-- image code here -->
