--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <a href="#">Blog</a>
 <a href="#">Contact</a>
 </nav>
+<div class="mainimg">
 
-<img src="main-header.png">
-  
+</div>
 <div class="container home">
-
+    <img src="img/main-header.png">
     <header class="intro">
        <!-- image code here -->
 
